cmake_minimum_required(VERSION 3.27)
project(projet_s2_CDataframe C)

set(CMAKE_C_STANDARD 11)

add_executable(projet_s2_CDataframe
        main.c
        FonctionsColonnes.h
        FonctionsColonnes.c
        FonctionsCDataFrame.h
        FonctionsCDataFrame.c
        FonctionsColonnes.c
        FonctionsColonnes.h
        main.c
        FonctionsColonnes.c
        FonctionsColonnes.c
        FonctionsColonnes.c)
